# PaddleOCR-json

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.just  JUSTFILE_README.md  README.md  TESTING.md  justfile  release-please-config.json
.github/workflows/: build-and-release.yml  release-please.yml  release.yml  test.yml
api/PowerShell/: PPOCR_api.ps1  demo.ps1
api/go/: go.mod
api/go/cmd/demo1/: main.go
api/go/cmd/demo2/: main.go
api/go/cmd/demo3/: main.go
api/go/ppocr/: ppocr.go
api/go/tbpu/: tbpu.go
api/go/visualize/: drawing.go  layers.go  types.go  utils.go  visualize.go
api/node.js/: README.md  jest.config.js  package.json
api/node.js/__tests__/: integration.test.ts  jest.setup.js  ocr.test.ts
api/node.js/es5/: worker.js
api/node.js/esnext/: worker.js
api/node.js/ts/: worker.ts
api/python/: .gitignore  PPOCR_api.py  PPOCR_visualize.py  README.md  demo1.py  demo2.py  demo3.py  pytest.ini  requirements-test.txt
api/python/tbpu/: __init__.py  parser_multi_line.py  parser_multi_none.py  parser_multi_para.py  parser_none.py  parser_single_code.py  parser_single_line.py  parser_single_none.py  parser_single_para.py  tbpu.py
api/python/tbpu/parser_tools/: gap_tree.py  line_preprocessing.py  paragraph_parse.py
api/python/tests/: __init__.py  conftest.py  test_ppocr_api.py
cpp/: BUILD_IMPROVEMENTS.md  CMakeLists.txt  Dockerfile  README-docker.md  README-linux.md  README.md
cpp/.source/: .gitignore
cpp/cmake/: opencv-install-utils.cmake
cpp/docs/: Porting-Guide.md
cpp/examples/: c_api_example.c
cpp/include/: args.h  ocr_cls.h  ocr_det.h  ocr_rec.h  paddleocr.h  paddleocr_c_api.h  task.h
cpp/include/auto_log/: autolog.h
cpp/src/: args.cpp  main.cpp  paddleocr.cpp  paddleocr_c_api.cpp  task.cpp  task_linux.cpp  task_win32.cpp  utility.cpp
cpp/tests/: CMakeLists.txt  test_args.cpp  test_base64.cpp  test_main.cpp  test_task.cpp
cpp/tools/: linux_build.sh  linux_build_cross.sh  linux_build_enhanced.sh  linux_build_musl.sh  linux_build_opencv.sh  linux_run.sh
cpp/tools/linux_dist_tools/: README.txt  install_env.sh  run.sh
docker/: Dockerfile.musl-paddle  build-paddle-inference.sh
docs/: Build-Guide.md  Detailed-Usage-Guide.md  Migration-Guide.md  update-v1.3.md
test-data/: README.md  config_samples.json  error_responses.json  generate_test_images.py  sample_responses.json
